@@ -23,12 +23,12 @@ ok(!$one->get_meta('xxx'), "no meta-data associated for key 'xxx'");
 
 $one->set_meta('xxx', '123');
 
-is($one->get_meta('xxx'), '123', "got meta-data");
+is($one->meta('xxx'), '123', "got meta-data");
 
-is($one->get_meta('xxx', '321'), '123', "did not use default");
+is($one->meta('xxx', '321'), '123', "did not use default");
 
-is($one->get_meta('yyy', '1221'), '1221', "got the default");
+is($one->meta('yyy', '1221'), '1221', "got the default");
 
-is($one->get_meta('yyy'), '1221', "last call set the value to the default for future use");
+is($one->meta('yyy'), '1221', "last call set the value to the default for future use");
 
 done_testing;
