@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make third-party meta-data interface consistent.
+
 0.000018  2016-01-12 05:53:29-08:00 America/Los_Angeles
 
     - Better solution to the $?, $!, and $@ problem
